force-app/main/default/objects/Account/fields/AM_Via_principal__c.field-meta.xml
<CustomField>
    <fullName>AM_Via_principal__c</fullName>
    <description>Req. ID AM-006. Campo utilizado en la concatenación de la dirección.</description>
    <inlineHelpText>AV    Avenida
CL    Calle
CR   Carrera
CRT Carretera
CIR  Circular
CRV Circunvalar
DG   Diagonal
MZ   Manzana
VRD Vereda
LT     Lote</inlineHelpText>
    <label>Via principal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AVIAL</fullName>
                <label>Anillo vial</label>
            </value>
            <value>
                <fullName>AV</fullName>
                <label>Avenida</label>
            </value>
            <value>
                <fullName>BG</fullName>
                <label>Bodega</label>
            </value>
            <value>
                <fullName>CL</fullName>
                <label>Calle</label>
            </value>
            <value>
                <fullName>CR</fullName>
                <label>Carrera</label>
            </value>
            <value>
                <fullName>CRT</fullName>
                <label>Carretera</label>
            </value>
            <value>
                <fullName>CIR</fullName>
                <label>Circular</label>
            </value>
            <value>
                <fullName>CRV</fullName>
                <label>Circunvalar</label>
            </value>
            <value>
                <fullName>Corregimiento</fullName>
            </value>
            <value>
                <fullName>DG</fullName>
                <label>Diagonal</label>
            </value>
            <value>
                <fullName>KM</fullName>
                <label>Kilometro</label>
            </value>
            <value>
                <fullName>LT</fullName>
                <label>Lote</label>
            </value>
            <value>
                <fullName>MZ</fullName>
                <label>Manzana</label>
            </value>
            <value>
                <fullName>PCN</fullName>
                <label>Parcelacion</label>
            </value>
            <value>
                <fullName>TR</fullName>
                <label>Transversal</label>
            </value>
            <value>
                <fullName>URB</fullName>
                <label>Urbanizacion</label>
            </value>
            <value>
                <fullName>VTE</fullName>
                <label>Variante</label>
            </value>
            <value>
                <fullName>VRD</fullName>
                <label>Vereda</label>
            </value>
            <value>
                <fullName>VI</fullName>
                <label>Via</label>
            </value>
            <value>
                <fullName>ZN</fullName>
                <label>Zona</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>