force-app/main/default/objects/Account/fields/Aprobado_para_reasignacion__c.field-meta.xml
<CustomField>
    <fullName>Aprobado_para_reasignacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobado para reasignación</label>
    <type>Checkbox</type>
</CustomField>