force-app/main/default/objects/Account/fields/Autoriza_Tratamiento_Datos_Personales__c.field-meta.xml
<CustomField>
    <fullName>Autoriza_Tratamiento_Datos_Personales__c</fullName>
    <label>Autoriza Tratamiento Datos Personales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>