force-app/main/default/objects/Account/fields/Cantidad_de_Vehiculos__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Vehiculos__c</fullName>
    <description>Cantidad de vehículos que posee el cliente.</description>
    <inlineHelpText>Cantidad de vehículos que posee el cliente.</inlineHelpText>
    <label>Cantidad de Vehículos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>