force-app/main/default/objects/Account/fields/Cantidad_Usados__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Usados__c</fullName>
    <description>Campo que recibe la cantidad de vehiculos usados.</description>
    <inlineHelpText>Campo que recibe la cantidad de vehiculos usados.</inlineHelpText>
    <label>Cantidad Usados</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>