force-app/main/default/objects/Account/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <defaultValue>&quot;Prospecto&quot;</defaultValue>
    <description>Categoría de cliente con respecto a la cantidad de vehículos que posee.</description>
    <label>Categoría del cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecto</fullName>
                <default>true</default>
                <label>Prospecto: No tiene vehículo</label>
            </value>
            <value>
                <fullName>Beginner</fullName>
                <label>Beginner: 1 solo vehículo</label>
            </value>
            <value>
                <fullName>Silver</fullName>
                <label>Silver: 2 a 4 vehículos</label>
            </value>
            <value>
                <fullName>Gold</fullName>
                <label>Gold: 5 a 8 vehículos</label>
            </value>
            <value>
                <fullName>Black</fullName>
                <label>Black: 9 o más</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>