force-app/main/default/objects/Account/fields/categoria_de_prospeccion__c.field-meta.xml
<CustomField>
    <fullName>categoria_de_prospeccion__c</fullName>
    <label>Subcategoria fuente de prospección</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AccountSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Playas de Ventas</fullName>
            </value>
            <value>
                <fullName>Colegios/Universidades</fullName>
            </value>
            <value>
                <fullName>Relacionamiento</fullName>
            </value>
            <value>
                <fullName>Aliados Financieros</fullName>
            </value>
            <value>
                <fullName>Ferias</fullName>
            </value>
            <value>
                <fullName>Salud</fullName>
            </value>
            <value>
                <fullName>Página Web</fullName>
            </value>
            <value>
                <fullName>Redes Sociales</fullName>
            </value>
            <value>
                <fullName>Portales Externos</fullName>
            </value>
            <value>
                <fullName>Cuña de Radio</fullName>
            </value>
            <value>
                <fullName>Comercial de TV</fullName>
            </value>
            <value>
                <fullName>Valla</fullName>
            </value>
            <value>
                <fullName>Revista</fullName>
            </value>
            <value>
                <fullName>Prensa</fullName>
            </value>
            <value>
                <fullName>Línea 470</fullName>
            </value>
            <value>
                <fullName>Financieros</fullName>
            </value>
            <value>
                <fullName>Seguros</fullName>
            </value>
            <value>
                <fullName>Honda Motos</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>