force-app/main/default/objects/Account/fields/Centro_educativo__c.field-meta.xml
<CustomField>
    <fullName>Centro_educativo__c</fullName>
    <inlineHelpText>En caso de que aplique, indicar el nombre del centro educativo.</inlineHelpText>
    <label>Centro educativo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>