force-app/main/default/objects/Account/fields/Codigo_ERP__c.field-meta.xml
<CustomField>
    <fullName>Codigo_ERP__c</fullName>
    <externalId>true</externalId>
    <label>Código ERP</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>