force-app/main/default/objects/Account/fields/Codigo_Postal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal__c</fullName>
    <label>Codigo Postal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>