force-app/main/default/objects/Account/fields/Codigo_UNOEE__c.field-meta.xml
<CustomField>
    <fullName>Codigo_UNOEE__c</fullName>
    <externalId>true</externalId>
    <label>Codigo UNOEE</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>