force-app/main/default/objects/Account/fields/Concesionario__c.field-meta.xml
<CustomField>
    <fullName>Concesionario__c</fullName>
    <formula>TEXT(Owner.AM_Concesionario__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concesionario</label>
    <type>Text</type>
</CustomField>