force-app/main/default/objects/Account/fields/Concesionario_Vitrina__c.field-meta.xml
<CustomField>
    <fullName>Concesionario_Vitrina__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concesionario / Vitrina</label>
    <referenceTo>Concesionario__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>