force-app/main/default/objects/Account/fields/containsUserIdCustomSetting__c.field-meta.xml
<CustomField>
    <fullName>containsUserIdCustomSetting__c</fullName>
    <formula>contains($Setup.ReasignacionMasiva__c.Id_Usuario__c,$User.Id)==false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>!containsUserIdCustomSetting</label>
    <type>Checkbox</type>
</CustomField>