force-app/main/default/objects/Account/fields/ConvertidoLead__c.field-meta.xml
<CustomField>
    <fullName>ConvertidoLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ConvertidoLead</label>
    <type>Checkbox</type>
</CustomField>