force-app/main/default/objects/Account/fields/Copia_Tipo_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Copia_Tipo_de_Cliente__c</fullName>
    <label>Copia Tipo de Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cliente Honda</fullName>
            </value>
            <value>
                <fullName>Cliente no Honda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>