force-app/main/default/objects/Account/fields/Correo_electronico_cliente__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico_cliente__c</fullName>
    <formula>PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correo electrónico cliente</label>
    <type>Text</type>
</CustomField>