force-app/main/default/objects/Account/fields/Creacion_cliente_para_facturacion__c.field-meta.xml
<CustomField>
    <fullName>Creacion_cliente_para_facturacion__c</fullName>
    <description>Se debe seleccionar SI cuando se requiere que el cliente sea creado en el sistema facturación.</description>
    <inlineHelpText>Se debe seleccionar SI cuando se requiere que el cliente sea creado en el sistema facturación.</inlineHelpText>
    <label>Creación cliente para facturación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
                <default>true</default>
                <label>NO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>