force-app/main/default/objects/Account/fields/Creado_en_UNOEE__c.field-meta.xml
<CustomField>
    <fullName>Creado_en_UNOEE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Esta casilla se marca cuando se confirma que el registro existe en UNOEE.</description>
    <label>Creado en UNOEE</label>
    <type>Checkbox</type>
</CustomField>