force-app/main/default/objects/Account/fields/Cuenta_autos__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_autos__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Seleccionado cuando cuenta fue creada por un usuario de la division autos</inlineHelpText>
    <label>Cuenta autos</label>
    <type>Checkbox</type>
</CustomField>