force-app/main/default/objects/Account/fields/Cuenta_motos__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_motos__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Seleccionado cuando cuenta fue creada por un usuario de la division motos</inlineHelpText>
    <label>Cuenta motos</label>
    <type>Checkbox</type>
</CustomField>