force-app/main/default/objects/Account/fields/Datos_Autorizacion_Web__c.field-meta.xml
<CustomField>
    <fullName>Datos_Autorizacion_Web__c</fullName>
    <label>Evidencia Autorización Habeas Data.</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>