force-app/main/default/objects/Account/fields/Datos_Suministrados_Web__c.field-meta.xml
<CustomField>
    <fullName>Datos_Suministrados_Web__c</fullName>
    <label>Datos Suministrados Web</label>
    <type>TextArea</type>
</CustomField>