force-app/main/default/objects/Account/fields/Desea_recibir_informacion_al_movil__c.field-meta.xml
<CustomField>
    <fullName>Desea_recibir_informacion_al_movil__c</fullName>
    <label>¿Desea recibir información al móvil?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>