force-app/main/default/objects/Account/fields/Detalle_de_categor_a__c.field-meta.xml
<CustomField>
    <fullName>Detalle_de_categor_a__c</fullName>
    <label>Detalle de categoría fuente prospección</label>
    <length>255</length>
    <type>Text</type>
</CustomField>