force-app/main/default/objects/Account/fields/Detalle_de_interes_del_lead__c.field-meta.xml
<CustomField>
    <fullName>Detalle_de_interes_del_lead__c</fullName>
    <description>Se detalla el interés que tenía el cliente al momento de ser lead.</description>
    <inlineHelpText>Este detalle proviene del lead y solo debe ser tomado en cuenta para la primera oportunidad.</inlineHelpText>
    <label>Detalle de interés del lead</label>
    <type>TextArea</type>
</CustomField>