force-app/main/default/objects/Account/fields/Digito_de_verificacion__c.field-meta.xml
<CustomField>
    <fullName>Digito_de_verificacion__c</fullName>
    <formula>IF(

MOD( prueba_de_digito__c ,11)&gt;1,

11-MOD( prueba_de_digito__c ,11),

MOD( prueba_de_digito__c ,11)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Digito de verificacion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>