force-app/main/default/objects/Account/fields/DireccionERP__c.field-meta.xml
<CustomField>
    <fullName>DireccionERP__c</fullName>
    <description>Dirección que es recibida desde los sistemas SAP y UNOEE</description>
    <label>DireccionERP</label>
    <type>TextArea</type>
</CustomField>