force-app/main/default/objects/Account/fields/Email_Validado__c.field-meta.xml
<CustomField>
    <fullName>Email_Validado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Usado para indicar que el email fue validado por el web service</description>
    <label>Email Validado</label>
    <type>Checkbox</type>
</CustomField>