force-app/main/default/objects/Account/fields/Esta_suscrito_a_algun_periodico__c.field-meta.xml
<CustomField>
    <fullName>Esta_suscrito_a_algun_periodico__c</fullName>
    <label>¿Esta suscrito a algun periodico?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ninguno</fullName>
            </value>
            <value>
                <fullName>El Pais</fullName>
            </value>
            <value>
                <fullName>El Tiempo</fullName>
            </value>
            <value>
                <fullName>El Espectador</fullName>
            </value>
            <value>
                <fullName>El Nuevo Siglo</fullName>
            </value>
            <value>
                <fullName>Portafolio</fullName>
            </value>
            <value>
                <fullName>La Republica</fullName>
            </value>
            <value>
                <fullName>El Colombiano</fullName>
            </value>
            <value>
                <fullName>El Mundo</fullName>
            </value>
            <value>
                <fullName>El Heraldo</fullName>
            </value>
            <value>
                <fullName>Al Dia</fullName>
            </value>
            <value>
                <fullName>El Universal</fullName>
            </value>
            <value>
                <fullName>Manangue hoy</fullName>
            </value>
            <value>
                <fullName>La Patria</fullName>
            </value>
            <value>
                <fullName>El Nuevo Liberal</fullName>
            </value>
            <value>
                <fullName>El Pilon</fullName>
            </value>
            <value>
                <fullName>El Meridiano de Cordoba</fullName>
            </value>
            <value>
                <fullName>La Nacion</fullName>
            </value>
            <value>
                <fullName>Diario del Huila</fullName>
            </value>
            <value>
                <fullName>La Guajira</fullName>
            </value>
            <value>
                <fullName>El Informador</fullName>
            </value>
            <value>
                <fullName>La Opinion</fullName>
            </value>
            <value>
                <fullName>La Crónica del Quindio</fullName>
            </value>
            <value>
                <fullName>El Frente</fullName>
            </value>
            <value>
                <fullName>Vanguardia Liberal</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>La tarde</fullName>
            </value>
            <value>
                <fullName>El meridiano</fullName>
            </value>
            <value>
                <fullName>Diario del sur</fullName>
            </value>
            <value>
                <fullName>El liberal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>