force-app/main/default/objects/Account/fields/Esta_suscrito_a_alguna_revista__c.field-meta.xml
<CustomField>
    <fullName>Esta_suscrito_a_alguna_revista__c</fullName>
    <label>¿Esta suscrito a alguna revista?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ninguna</fullName>
            </value>
            <value>
                <fullName>Dinero</fullName>
            </value>
            <value>
                <fullName>Semana</fullName>
            </value>
            <value>
                <fullName>Cromos</fullName>
            </value>
            <value>
                <fullName>Arcadia</fullName>
            </value>
            <value>
                <fullName>Axxis</fullName>
            </value>
            <value>
                <fullName>Jet set</fullName>
            </value>
            <value>
                <fullName>Cambio</fullName>
            </value>
            <value>
                <fullName>Soho</fullName>
            </value>
            <value>
                <fullName>TV y Novelas</fullName>
            </value>
            <value>
                <fullName>Caras</fullName>
            </value>
            <value>
                <fullName>Vanidades</fullName>
            </value>
            <value>
                <fullName>AUTOS Y MOTOS</fullName>
            </value>
            <value>
                <fullName>BONSAI FOCUS</fullName>
            </value>
            <value>
                <fullName>BUENHOGAR</fullName>
            </value>
            <value>
                <fullName>CAMBIO 16</fullName>
            </value>
            <value>
                <fullName>CIENTIFICA</fullName>
            </value>
            <value>
                <fullName>CIRCULO DE LECTORES</fullName>
            </value>
            <value>
                <fullName>COSMOPOLITAN</fullName>
            </value>
            <value>
                <fullName>CREDENCIAL</fullName>
            </value>
            <value>
                <fullName>CREMIL</fullName>
            </value>
            <value>
                <fullName>DINNERS</fullName>
            </value>
            <value>
                <fullName>ENTER</fullName>
            </value>
            <value>
                <fullName>INNOVACION Y CIENCIA</fullName>
            </value>
            <value>
                <fullName>JOVENAL</fullName>
            </value>
            <value>
                <fullName>LA ECONOMIA</fullName>
            </value>
            <value>
                <fullName>LEGIS</fullName>
            </value>
            <value>
                <fullName>MECANICA POPULAR</fullName>
            </value>
            <value>
                <fullName>MEDICINA</fullName>
            </value>
            <value>
                <fullName>NATIONAL GEOGRAPHIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>