force-app/main/default/objects/Account/fields/Estado_sucursal__c.field-meta.xml
<CustomField>
    <fullName>Estado_sucursal__c</fullName>
    <label>Estado sucursal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>