force-app/main/default/objects/Account/fields/Fecha_Fin_Garantia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Fin_Garantia__c</fullName>
    <label>Fecha Fin Garantía</label>
    <type>Date</type>
</CustomField>