force-app/main/default/objects/Account/fields/Fecha_real_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_real_de_entrega__c</fullName>
    <label>Fecha real de entrega</label>
    <summarizedField>Opportunity.AM_Fecha_de_entrega_vehiculo__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>PU</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>