force-app/main/default/objects/Account/fields/FechaAutosPU__c.field-meta.xml
<CustomField>
    <fullName>FechaAutosPU__c</fullName>
    <label>FechaAutosPU</label>
    <type>Date</type>
</CustomField>