force-app/main/default/objects/Account/fields/Grado_de_escolaridad__c.field-meta.xml
<CustomField>
    <fullName>Grado_de_escolaridad__c</fullName>
    <label>Grado de escolaridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primaria</fullName>
            </value>
            <value>
                <fullName>Secundaria</fullName>
            </value>
            <value>
                <fullName>Tecnológico-Técnico</fullName>
            </value>
            <value>
                <fullName>Universitario</fullName>
            </value>
            <value>
                <fullName>Postgrado</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>