force-app/main/default/objects/Account/fields/ID_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>ID_Salesforce__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Salesforce</label>
    <type>Text</type>
</CustomField>