force-app/main/default/objects/Account/fields/Industria__c.field-meta.xml
<CustomField>
    <fullName>Industria__c</fullName>
    <label>Sector Empresarial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agrícola</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Prestación de Servicios</fullName>
            </value>
            <value>
                <fullName>Transporte</fullName>
            </value>
            <value>
                <fullName>Financiero</fullName>
            </value>
            <value>
                <fullName>Comercio</fullName>
            </value>
            <value>
                <fullName>Construcción</fullName>
            </value>
            <value>
                <fullName>Minero y Energético</fullName>
            </value>
            <value>
                <fullName>Comunicaciones</fullName>
            </value>
            <value>
                <fullName>Gobierno</fullName>
            </value>
            <value>
                <fullName>Salud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>