force-app/main/default/objects/Account/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>Apellidos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>