force-app/main/default/objects/Account/fields/Lista_de_cumplimiento__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_cumplimiento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lista de cumplimiento</label>
    <type>Checkbox</type>
</CustomField>