force-app/main/default/objects/Account/fields/Lista_Restrictiva__c.field-meta.xml
<CustomField>
    <fullName>Lista_Restrictiva__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que si está en true permite consumir el web service de Creación de Cliente en SAP</description>
    <label>Sin coincidencias listas restrictivas</label>
    <type>Checkbox</type>
</CustomField>