force-app/main/default/objects/Account/fields/Mail_de_referidor__c.field-meta.xml
<CustomField>
    <fullName>Mail_de_referidor__c</fullName>
    <formula>IF( Referidor_Cuenta__c &lt;&gt; null, Referidor_Cuenta__r.AM_Correo_Electronico_Trabajo__c , IF( Referidor_Lead__c &lt;&gt; null, Referidor_Lead__r.Email , &quot;No ha seleccionado Referidor&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail de referidor</label>
    <type>Text</type>
</CustomField>