force-app/main/default/objects/Account/fields/MC_Autoriza_tratardatos_personales__c.field-meta.xml
<CustomField>
    <fullName>MC_Autoriza_tratardatos_personales__c</fullName>
    <label>Autoriza tratamiento de datos personales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>