force-app/main/default/objects/Account/fields/MC_Cantidad_clientes_activos__c.field-meta.xml
<CustomField>
    <fullName>MC_Cantidad_clientes_activos__c</fullName>
    <formula>IF(
AND(
TEXT(AM_Estado__c)=&quot;Activo&quot;),

1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad clientes activos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>