force-app/main/default/objects/Account/fields/MC_Cantidad_clientes_inactivos__c.field-meta.xml
<CustomField>
    <fullName>MC_Cantidad_clientes_inactivos__c</fullName>
    <formula>IF(
AND(
TEXT(AM_Estado__c )=&quot;Inactivo&quot;),

1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad clientes inactivos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>