force-app/main/default/objects/Account/fields/MC_Correo_electronico_Empresa__c.field-meta.xml
<CustomField>
    <fullName>MC_Correo_electronico_Empresa__c</fullName>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>