force-app/main/default/objects/Account/fields/MC_Direccion_completa__c.field-meta.xml
<CustomField>
    <fullName>MC_Direccion_completa__c</fullName>
    <formula>IF(AND( NOT(ISBLANK(TEXT(AM_Via_principal__c))) , OR(NOT(ISBLANK(AM_Numero_via_principal__c)) ,  NOT(ISBLANK(AM_Complemento__c)) ) ),&quot;SI&quot;,&quot;NO&quot;)</formula>
    <label>Direccion completa</label>
    <type>Text</type>
</CustomField>